Code update for attrition.ipynb

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -769,7 +769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -783,34 +783,38 @@
             "text/plain": [
               "array([[0., 1., 0.],\n",
               "       [0., 1., 0.],\n",
-              "       [0., 1., 0.],\n",
+              "       [0., 0., 1.],\n",
               "       ...,\n",
               "       [0., 1., 0.],\n",
-              "       [0., 0., 1.],\n",
-              "       [0., 1., 0.]])"
+              "       [0., 1., 0.],\n",
+              "       [0., 0., 1.]])"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Create a OneHotEncoder for the Department column\n",
-        "\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "dept_encoder = OneHotEncoder(sparse_output=False)\n",
         "\n",
         "# Fit the encoder to the training data\n",
-        "\n",
+        "dept_encoder.fit(y_train['Department'].values.reshape(-1,1))\n",
         "\n",
         "# Create two new variables by applying the encoder\n",
         "# to the training and testing data\n",
+        "encoded_train_Department = dept_encoder.transform(y_train['Department'].values.reshape(-1,1))\n",
+        "encoded_test_Department = dept_encoder.transform(y_test['Department'].values.reshape(-1,1))\n",
         "\n",
+        "encoded_train_Department[:]\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -823,29 +827,32 @@
           "data": {
             "text/plain": [
               "array([[1., 0.],\n",
-              "       [0., 1.],\n",
+              "       [1., 0.],\n",
               "       [1., 0.],\n",
               "       ...,\n",
-              "       [1., 0.],\n",
+              "       [0., 1.],\n",
               "       [1., 0.],\n",
               "       [1., 0.]])"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Create a OneHotEncoder for the Attrition column\n",
-        "\n",
+        "attr_encoder = OneHotEncoder(sparse_output=False)\n",
         "\n",
         "# Fit the encoder to the training data\n",
-        "\n",
+        "attr_encoder.fit(y_train['Attrition'].values.reshape(-1,1))\n",
         "\n",
         "# Create two new variables by applying the encoder\n",
         "# to the training and testing data\n",
-        "\n"
+        "encoded_train_Attrition = attr_encoder.transform(y_train['Attrition'].values.reshape(-1,1))\n",
+        "encoded_test_Attrition = attr_encoder.transform(y_test['Attrition'].values.reshape(-1,1))\n",
+        "\n",
+        "encoded_train_Attrition[:]\n"
       ]
     },
     {
