Git push building the model

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -866,24 +866,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 15,
       "metadata": {
         "id": "WUptZqmSGc3T"
       },
       "outputs": [],
       "source": [
         "# Find the number of columns in the X training data\n",
-        "\n",
+        "input_features = X_train_scaled.shape[1]\n",
         "\n",
         "# Create the input layer\n",
+        "input_layer = layers.Input(shape=(input_features,))\n",
         "\n",
-        "\n",
-        "# Create at least two shared layers\n"
+        "# Create at least two shared layers\n",
+        "shared_layer1 = layers.Dense(64, activation='relu', name='Shared_1')(input_layer)\n",
+        "shared_layer2 = layers.Dense(32128, activation='relu', name='Shared_2')(shared_layer1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 16,
       "metadata": {
         "id": "JukjTm2yTEqd"
       },
@@ -893,15 +895,15 @@
         "# with a hidden layer and an output layer\n",
         "\n",
         "# Create the hidden layer\n",
-        "\n",
+        "branch_hidden_layer_1 = layers.Dense(32, activation='relu', name = 'hid_dept')(shared_layer2)\n",
         "\n",
         "# Create the output layer\n",
-        "\n"
+        "output_layer = layers.Dense(3, activation='softmax', name = 'out_dept')(branch_hidden_layer_1)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 17,
       "metadata": {
         "id": "9OqhUiOJUBkR"
       },
@@ -911,15 +913,15 @@
         "# with a hidden layer and an output layer\n",
         "\n",
         "# Create the hidden layer\n",
-        "\n",
+        "branch_hidden_layer_2 = layers.Dense(32, activation='relu', name = 'hid_attrition')(shared_layer2)\n",
         "\n",
         "# Create the output layer\n",
-        "\n"
+        "output_layer2 = layers.Dense(2, activation='sigmoid', name = 'out_attrition')(branch_hidden_layer_2)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -929,43 +931,120 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Model: \"model\"\n",
-            "__________________________________________________________________________________________________\n",
-            " Layer (type)                Output Shape                 Param #   Connected to                  \n",
-            "==================================================================================================\n",
-            " input (InputLayer)          [(None, 10)]                 0         []                            \n",
-            "                                                                                                  \n",
-            " shared1 (Dense)             (None, 64)                   704       ['input[0][0]']               \n",
-            "                                                                                                  \n",
-            " shared2 (Dense)             (None, 128)                  8320      ['shared1[0][0]']             \n",
-            "                                                                                                  \n",
-            " department_hidden (Dense)   (None, 32)                   4128      ['shared2[0][0]']             \n",
-            "                                                                                                  \n",
-            " attrition_hidden (Dense)    (None, 32)                   4128      ['shared2[0][0]']             \n",
-            "                                                                                                  \n",
-            " department_output (Dense)   (None, 3)                    99        ['department_hidden[0][0]']   \n",
-            "                                                                                                  \n",
-            " attrition_output (Dense)    (None, 2)                    66        ['attrition_hidden[0][0]']    \n",
-            "                                                                                                  \n",
-            "==================================================================================================\n",
-            "Total params: 17445 (68.14 KB)\n",
-            "Trainable params: 17445 (68.14 KB)\n",
-            "Non-trainable params: 0 (0.00 Byte)\n",
-            "__________________________________________________________________________________________________\n"
-          ]
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"functional_1\"</span>\n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[1mModel: \"functional_1\"\u001b[0m\n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┓\n",
+              "┃<span style=\"font-weight: bold\"> Layer (type)        </span>┃<span style=\"font-weight: bold\"> Output Shape      </span>┃<span style=\"font-weight: bold\">    Param # </span>┃<span style=\"font-weight: bold\"> Connected to      </span>┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━┩\n",
+              "│ input_layer         │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">25</span>)        │          <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │ -                 │\n",
+              "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">InputLayer</span>)        │                   │            │                   │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ Shared_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)    │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">64</span>)        │      <span style=\"color: #00af00; text-decoration-color: #00af00\">1,664</span> │ input_layer[<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>][<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>] │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ Shared_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)    │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32128</span>)     │  <span style=\"color: #00af00; text-decoration-color: #00af00\">2,088,320</span> │ Shared_1[<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>][<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>]    │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ hid_dept (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)    │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)        │  <span style=\"color: #00af00; text-decoration-color: #00af00\">1,028,128</span> │ Shared_2[<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>][<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>]    │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ hid_attrition       │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)        │  <span style=\"color: #00af00; text-decoration-color: #00af00\">1,028,128</span> │ Shared_2[<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>][<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>]    │\n",
+              "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)             │                   │            │                   │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ out_dept (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)    │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)         │         <span style=\"color: #00af00; text-decoration-color: #00af00\">99</span> │ hid_dept[<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>][<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>]    │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ out_attrition       │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">2</span>)         │         <span style=\"color: #00af00; text-decoration-color: #00af00\">66</span> │ hid_attrition[<span style=\"color: #00af00; text-decoration-color: #00af00\">0</span>]… │\n",
+              "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)             │                   │            │                   │\n",
+              "└─────────────────────┴───────────────────┴────────────┴───────────────────┘\n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "┏━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┓\n",
+              "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape     \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m   Param #\u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mConnected to     \u001b[0m\u001b[1m \u001b[0m┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━┩\n",
+              "│ input_layer         │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m25\u001b[0m)        │          \u001b[38;5;34m0\u001b[0m │ -                 │\n",
+              "│ (\u001b[38;5;33mInputLayer\u001b[0m)        │                   │            │                   │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ Shared_1 (\u001b[38;5;33mDense\u001b[0m)    │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m64\u001b[0m)        │      \u001b[38;5;34m1,664\u001b[0m │ input_layer[\u001b[38;5;34m0\u001b[0m][\u001b[38;5;34m0\u001b[0m] │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ Shared_2 (\u001b[38;5;33mDense\u001b[0m)    │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32128\u001b[0m)     │  \u001b[38;5;34m2,088,320\u001b[0m │ Shared_1[\u001b[38;5;34m0\u001b[0m][\u001b[38;5;34m0\u001b[0m]    │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ hid_dept (\u001b[38;5;33mDense\u001b[0m)    │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)        │  \u001b[38;5;34m1,028,128\u001b[0m │ Shared_2[\u001b[38;5;34m0\u001b[0m][\u001b[38;5;34m0\u001b[0m]    │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ hid_attrition       │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)        │  \u001b[38;5;34m1,028,128\u001b[0m │ Shared_2[\u001b[38;5;34m0\u001b[0m][\u001b[38;5;34m0\u001b[0m]    │\n",
+              "│ (\u001b[38;5;33mDense\u001b[0m)             │                   │            │                   │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ out_dept (\u001b[38;5;33mDense\u001b[0m)    │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)         │         \u001b[38;5;34m99\u001b[0m │ hid_dept[\u001b[38;5;34m0\u001b[0m][\u001b[38;5;34m0\u001b[0m]    │\n",
+              "├─────────────────────┼───────────────────┼────────────┼───────────────────┤\n",
+              "│ out_attrition       │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m2\u001b[0m)         │         \u001b[38;5;34m66\u001b[0m │ hid_attrition[\u001b[38;5;34m0\u001b[0m]… │\n",
+              "│ (\u001b[38;5;33mDense\u001b[0m)             │                   │            │                   │\n",
+              "└─────────────────────┴───────────────────┴────────────┴───────────────────┘\n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">4,146,405</span> (15.82 MB)\n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m4,146,405\u001b[0m (15.82 MB)\n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">4,146,405</span> (15.82 MB)\n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m4,146,405\u001b[0m (15.82 MB)\n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+              "</pre>\n"
+            ],
+            "text/plain": [
+              "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
         "# Create the model\n",
-        "\n",
+        "model = Model(inputs=input_layer, outputs=[output_layer, output_layer2])\n",
         "\n",
         "# Compile the model\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss={'out_dept': 'categorical_crossentropy', 'out_attrition': 'categorical_crossentropy'},\n",
+        "              metrics={'out_dept':'accuracy', 'out_attrition':'accuracy'})\n",
         "\n",
-        "\n",
-        "# Summarize the model\n"
+        "# Summarize the model\n",
+        "model.summary()"
       ]
     },
     {
