Git push questions/Answers, Readme and Jupyter Notebook code

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -1357,9 +1357,26 @@
       "source": [
         "YOUR ANSWERS HERE\n",
         "\n",
-        "1. \n",
-        "2. \n",
-        "3. "
+        "1. The imbalance in our dataset, where certain classes dominate others (like \"no attrition\" and \"Research & Development\"), makes accuracy a deceptive metric. A simplistic model that always predicts these majority classes might appear accurate, yet it lacks practical value.\n",
+        "\n",
+        "To gauge the effectiveness of our model, we must consider the specific business context. If our main objective is to identify employees likely to leave and implement retention strategies, then a model that minimizes false negatives (high recall) is critical. This means prioritizing the correct identification of potential attrition, even if it leads to some false positives (incorrectly predicting attrition for some employees).\n",
+        "\n",
+        "Beyond accuracy, we'll focus on metrics like recall and precision, balancing their trade-off to ensure the model aligns with our business goals.\n",
+        "\n",
+        "2. In my model's architecture, I employed different activation functions for the department and attrition output layers. Specifically, I chose the softmax function for the department output, as it adeptly distributes probabilities across multiple classes, ensuring their sum totals 1. This is ideal for multi-class classification tasks like predicting which department an employee might belong to.\n",
+        "\n",
+        "Conversely, for the attrition output layer, I utilized the sigmoid function. This function is well-suited for binary classification, mapping input values to a range between 0 and 1, effectively representing probabilities of \"yes/no\" or \"true/false\" outcomes. In this context, the sigmoid function is ideal for predicting whether an employee will leave the company (attrition).\n",
+        "\n",
+        "By selecting activation functions that align with the nature of each output layer's task, I looked to enhance the model's overall predictive performance and accuracy.\n",
+        "\n",
+        "3. Several avenues exist for enhancing the model's performance:\n",
+        "\n",
+        "-Architecture Modifications: Experimenting with the model's structure by adding more layers or neurons could increase its capacity to learn complex patterns.\n",
+        "- Hyperparameter Optimization: Fine-tuning hyperparameters such as learning rate, batch size, the number of epochs, and optimizer choice can significantly impact model performance.\n",
+        "- Feature Engineering: Creating new features or transforming existing ones could uncover hidden relationships in the data and improve predictive power.\n",
+        "- Data Balancing: Addressing biases or imbalances in the dataset, perhaps through techniques like oversampling or undersampling, can help the model generalize better.\n",
+        "\n",
+        "These are just a few potential strategies for improving the model. A systematic approach involving experimentation and careful analysis will be critical in determining the most effective enhancements."
       ]
     },
     {
